bingd 0.3.1
===========

* Add zscore as an optional argument when constructing a GWAS object
* load.feature() checks loaded object class is GRanges


bingd 0.3.0
===========

Major changes
-------------

Adds initial implementation of Bayesian algorithm:

* Adds consolidate() function to reduce features within groups
* Adds calc.pr()
* Adds calc.conditionals()
  
Minor changes
-------------

* Adds tests for features() and fcols()
* Adds tests for consolidate()
* feature.labels() now just strips file extension from basename
* Adds summary method for AnnotatedGWAS objects

Bug fixes
---------

* Fixes bug in consolidate() causing feature names to be lost
* Fixes bug in local.features() causing it to fail when searched directories
  contained only one file

bingd 0.2.4
===========

* Implements S4 AnnotatedGWAS class
* Adds features() and fcols() accesors for AnnotatedGWAS objects
* pull.features() is deprecated
* Adds pvalue() and marker() accessors for GWAS objects


bingd 0.2.3.2
=============

* Export as.GWAS()
* Fix bug in z-score calculations

bingd 0.2.3.1
=============

* Bump version number

bingd 0.2.3
==========

* Major improvements to documentation
* Deprecated import.gwas()
* Implements S4 FeatureList class
* GWAS objects now require genome build information

bingd 0.2.2
===========

* Implements S4 GWAS class
* Updated methods to work with new class
* Adds tests for:
    - creating GWAS objects
    - adding annotations
    - calculating enrichment

bingd 0.2.1
===========

* Feature search

  * Local features independent of AnnotationHub can now be searched for using
    `local.features()`
  * Searching AnnotationHub is now done using `hub.features()`, to be consistent
    with `local.features()` and `hub.metadata()` is deprecated

* Uncached AnnotationHub features can be downloaded using cache.features()

bingd 0.2
=========

* Feature search

  * Searching is now decoupled from annotating and calculating enrichment