@@ -2,8 +2,12 @@ bingd 0.3.1
 ===========
 
 * Add zscore as an optional argument when constructing a GWAS object
+
 * load.feature() checks loaded object class is GRanges
 
+* Add verbose option to calc.bayes
+* Add S3 reporter functions for verbose option
+* calc.pr() and calc.conditionals() results are now S3 objects
 
 bingd 0.3.0
 ===========
